0.3.3a Changelog: - Fix User Area hiding behind the toolbar. - Fixed Activity section going inside the Now Playing section.

--- a/src/Serverlist/index.css
+++ b/src/Serverlist/index.css
@@ -1,3 +1,8 @@
+/*Channel List*/
+.scroller-1ox3I2, .scroller-WSmht3  {
+    padding-bottom: 50px;
+}
+
 /*Misc*/
 .folderIconWrapper-1oRIZr {
     border-radius: 8px;
