--- a/src/boot.css
+++ b/src/boot.css
@@ -5,7 +5,7 @@
 
 /*Version System*/
 :root {
-  --theme-version: "0.3.2a ";
+  --theme-version: "0.3.3a ";
 }
 
 [id^="SpotiCord"] .bd-addon-header .bd-version:before {
